Update unit/intgration test config.